--- a/index.html
+++ b/index.html
@@ -9,65 +9,67 @@
     <title>HW3</title>
 </head>
 <body>
-    <div class="header">
-        <div class="container">
-            <img class="img_logo" src="images/logo.png" alt="Fox">
-            <div class="nav">
-                <ul class="navbar">
-                    <li class="nav_item">
-                        <a href="#">Home</a>
+    <div class="box">
+        <div class="header">
+            <div class="container">
+                <img class="img_logo" src="images/logo.png" alt="Fox">
+                <div class="nav">
+                    <ul class="navbar">
+                        <li class="nav_item">
+                            <a href="#">Home</a>
+                        </li>
+                        <li class="nav_item">
+                            <a href="#">About us</a>
+                        </li>
+                        <li class="nav_item">
+                            <a href="#">Contacts</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="main">
+            <h1 class="title">Main heading</h1>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque amet autem repudiandae ipsa quasi delectus dolores laborum exercitationem. Vero, aliquam ullam. Aperiam, quibusdam? Quos eum adipisci rerum vero exercitationem consequuntur.</p>
+            <div class="container">
+                <ul class="main_list">
+                    <li class="main_item">
+                        <div class="main_container">
+                            <img class="main_item_img" src="images/img01.jpg" alt="">
+                            <h2 class="main_item_title">Subtitle here</h2>
+                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nihil accusamus sequi dolor ratione a ipsa quae eum nisi, suscipit incidunt corporis ducimus cumque molestiae, quisquam aliquam. Temporibus saepe fuga repellendus.</p>
+                        </div>
                     </li>
-                    <li class="nav_item">
-                        <a href="#">About us</a>
+                    <li class="main_item">
+                        <div class="main_container">
+                            <img class="main_item_img" src="images/img02.jpg" alt="">
+                            <h2 class="main_item_title">Subtitle here</h2>
+                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nihil accusamus sequi dolor ratione a ipsa quae eum nisi, suscipit incidunt corporis ducimus cumque molestiae, quisquam aliquam. Temporibus saepe fuga repellendus.</p>
+                        </div>
                     </li>
-                    <li class="nav_item">
-                        <a href="#">Contacts</a>
+                    <li class="main_item">
+                        <div class="main_container">
+                            <img class="main_item_img" src="images/img03.jpg" alt="">
+                            <h2 class="main_item_title">Subtitle here</h2>
+                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nihil accusamus sequi dolor ratione a ipsa quae eum nisi, suscipit incidunt corporis ducimus cumque molestiae, quisquam aliquam. Temporibus saepe fuga repellendus.</p>
+                        </div>
+                    </li>
+                    <li class="main_item">
+                        <div class="main_container">
+                            <img class="main_item_img" src="images/img03.jpg" alt="">
+                            <h2 class="main_item_title">Subtitle here</h2>
+                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nihil accusamus sequi dolor ratione a ipsa quae eum nisi, suscipit incidunt corporis ducimus cumque molestiae, quisquam aliquam. Temporibus saepe fuga repellendus.</p>
+                        </div>
+                    </li>
+                    <li class="main_item">
+                        <div class="main_container">
+                            <img class="main_item_img" src="images/img02.jpg" alt="">
+                            <h2 class="main_item_title">Subtitle here</h2>
+                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nihil accusamus sequi dolor ratione a ipsa quae eum nisi, suscipit incidunt corporis ducimus cumque molestiae, quisquam aliquam. Temporibus saepe fuga repellendus.</p>
+                        </div>
                     </li>
                 </ul>
             </div>
-        </div>
-    </div>
-    <div class="main">
-        <h1 class="title">Main heading</h1>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque amet autem repudiandae ipsa quasi delectus dolores laborum exercitationem. Vero, aliquam ullam. Aperiam, quibusdam? Quos eum adipisci rerum vero exercitationem consequuntur.</p>
-        <div class="container">
-            <ul class="main_list">
-                <li class="main_item">
-                    <div class="main_container">
-                        <img class="main_item_img" src="images/img01.jpg" alt="">
-                        <h2 class="main_item_title">Subtitle here</h2>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nihil accusamus sequi dolor ratione a ipsa quae eum nisi, suscipit incidunt corporis ducimus cumque molestiae, quisquam aliquam. Temporibus saepe fuga repellendus.</p>
-                    </div>
-                </li>
-                <li class="main_item">
-                    <div class="main_container">
-                        <img class="main_item_img" src="images/img02.jpg" alt="">
-                        <h2 class="main_item_title">Subtitle here</h2>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nihil accusamus sequi dolor ratione a ipsa quae eum nisi, suscipit incidunt corporis ducimus cumque molestiae, quisquam aliquam. Temporibus saepe fuga repellendus.</p>
-                    </div>
-                </li>
-                <li class="main_item">
-                    <div class="main_container">
-                        <img class="main_item_img" src="images/img03.jpg" alt="">
-                        <h2 class="main_item_title">Subtitle here</h2>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nihil accusamus sequi dolor ratione a ipsa quae eum nisi, suscipit incidunt corporis ducimus cumque molestiae, quisquam aliquam. Temporibus saepe fuga repellendus.</p>
-                    </div>
-                </li>
-                <li class="main_item">
-                    <div class="main_container">
-                        <img class="main_item_img" src="images/img03.jpg" alt="">
-                        <h2 class="main_item_title">Subtitle here</h2>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nihil accusamus sequi dolor ratione a ipsa quae eum nisi, suscipit incidunt corporis ducimus cumque molestiae, quisquam aliquam. Temporibus saepe fuga repellendus.</p>
-                    </div>
-                </li>
-                <li class="main_item">
-                    <div class="main_container">
-                        <img class="main_item_img" src="images/img02.jpg" alt="">
-                        <h2 class="main_item_title">Subtitle here</h2>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nihil accusamus sequi dolor ratione a ipsa quae eum nisi, suscipit incidunt corporis ducimus cumque molestiae, quisquam aliquam. Temporibus saepe fuga repellendus.</p>
-                    </div>
-                </li>
-            </ul>
         </div>
     </div>
 </body>
